# GLO-2005-H21

./: .gitignore  README.md  commandes.sql  gachettes.sql  main.py  pyproject.toml
db/: gachettes.sql  schemas.sql
src/: index.py  testing.py
src/database/: __init__.py  artiste.py  auth.py  client.py  commande.py  commentaire.py  facture.py  nomClient2.csv  nomOeuvre.csv  oeuvre.py  peuplementBD.py
src/routes/: accueil.py  artiste.py  auth.py  client.py  commande.py  facture.py  oeuvre.py
src/utils/: decorateurs.py  sql.py
static/: authentification.js  commandes.js  components.js  factures.js  index.js  login.js  profile.js  requetes.js
static/style/: bootstrap.css  style.css
templates/: bienvenu.html  footer.html  header.html  home.html  index.html  login.html  register.html
templates/Facture/: factures.html
templates/artiste/: modal.html  profil.html
templates/authentification/: login.html  modal.html  register.html
templates/commande/: commandes.html
templates/commentaire/: commentaires.html  creation.html
templates/oeuvre/: creation.html  modal.html  reservation.html
test/: test_auth.py  test_index.py
